# consign

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml  taplo.toml
src/: error.rs  main.rs
src/logging/: mod.rs
src/types/: categories.rs  error.rs  mod.rs  package.rs  package_listing.rs  portage_dir.rs  portage_file.rs  portage_listing.rs
src/utils/: dirscan.rs  mod.rs
