[package]
  bench   = true
  edition = "2021"
  name    = "consign"
  path    = "src/main.rs"
  test    = true
  version = "0.1.0"

[dependencies]
  serde              = { version = "1.0", features = ["derive"] }
  serde_json         = { version = "1.0" }
  tokio              = { version = "1.0", features = ["full"] }
  tokio-test         = { version = "0.4" }
  tokio-util         = { version = "0.7" }
  tracing            = { version = "0.1" }
  tracing-appender   = { version = "0.2" }
  tracing-attributes = { version = "0.1" }
  tracing-core       = { version = "0.1" }
  tracing-log        = { version = "0.2" }
  tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry", "std"] }

[build-dependencies]
  vergen     = { version = "9.0.0", features = ["build", "cargo", "rustc", "si"] }
  vergen-gix = { version = "1" }
